# LightningLauncher

./: LICENSE.md  README.md
app/llx/: .gitignore  build.gradle  gradle.properties  settings.gradle
app/llx/core/src/main/jni/: Android.mk  CMakeLists.txt  ll.c
permissions/permission_access_wifi_state/: build.gradle
scripts/CalendarIcon/: LICENSE.md
translations/: .gitignore  build_all.sh  uninstall_all.sh
translations/descriptions/: catalan.txt  chinese.txt  cz.txt  de.txt  dutch.txt  fi.txt  gr.txt  hu.txt  indonesian.txt  jp.txt  pl.txt  ptbr.txt  ro.txt  ru.txt  sp.txt  swe.txt
translations/lllp_ca/: .project  AndroidManifest.xml  build.xml
translations/lllp_cs/: .project  AndroidManifest.xml  build.xml
translations/lllp_de/: .project  AndroidManifest.xml  build.xml
translations/lllp_dv/: .project  AndroidManifest.xml  build.xml
translations/lllp_el/: .project  AndroidManifest.xml  build.xml
translations/lllp_es/: .project  AndroidManifest.xml  build.xml
translations/lllp_fi/: .project  AndroidManifest.xml  build.xml
translations/lllp_fr/: .project  AndroidManifest.xml  build.xml
translations/lllp_hr/: .project  AndroidManifest.xml  build.xml
translations/lllp_hu/: .project  AndroidManifest.xml  build.xml
translations/lllp_id/: .project  AndroidManifest.xml  build.xml
translations/lllp_it/: .project  AndroidManifest.xml  build.xml
translations/lllp_ja/: .project  AndroidManifest.xml  build.xml
translations/lllp_ko/: .project  AndroidManifest.xml  build.xml
translations/lllp_nl/: .project  AndroidManifest.xml  build.xml
(+700 files in other folders)
